# sbilife-llm-as-a-microservice

./: .gitignore  docker-compose.yml
cp/http-clients/llm/: pyproject.toml
cp/http-clients/llm/src/sbilifeco/cp/llm/: http_client.py
cp/http-clients/llm/test/: llm_test.py
cp/http-servers/llm/: pyproject.toml
cp/http-servers/llm/src/sbilifeco/cp/llm/: http_server.py
cp/paths/llm/: pyproject.toml
cp/paths/llm/src/sbilifeco/cp/llm/: paths.py
domain/boundaries/llm/: pyproject.toml
domain/boundaries/llm/src/sbilifeco/boundaries/: llm.py
gateways/vertex/: .gitignore  pyproject.toml
gateways/vertex/src/sbilifeco/gateways/: vertex.py  vertex_gemini.py
gateways/vertex/test/: envvars.py  vertex_test.py
