[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-gateway-vertex"
version = "0.1.7"
description = "Gateway to Google Vertex AI"
dependencies = [
    "anthropic>=0.68.1",
    "google-genai>=1.39.1",
    "python-magic>=0.4.27",
    "sbilifeco-models-base>=0.1.3",
    "sbilifeco-boundaries-llm>=0.1.6",
    "sbilifeco-boundary-material-reader>=0.1.0"
]