[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-gateway-vertex"
version = "0.4.0"
description = "Gateway to Google Vertex AI"
dependencies = [
    "anthropic>=0.68.1",
    "anthropic[vertex]",
    "google-genai>=1.39.1",
    "python-magic>=0.4.27",
    "sbilifeco-models-base>=0.1.4",
    "sbilifeco-boundary-llm>=0.3.0",
    "sbilifeco-boundary-material-reader>=0.2.0"
]