[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "sbilifeco-boundary-llm"
version = "0.3.0"
description = "description"
dependencies = [
    "pydantic>=2.11.5",
    "sbilifeco-models-base>=0.1.4",
    "sbilifeco-models-db-metadata>=0.1.5"
]
